<resources>
    <string name="app_name">LostAndFound</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_lose_add">Lose ADs</string>
    <string name="title_chat">Chat</string>
    <string name="title_lose">Lose</string>
    <string name="title_profile">Account</string>
    <string name="title_activity_lose_find">LoseFindActivity</string>
    <string name="search_lose_thing">Search</string>
    <string name="title_upload">Upload</string>
    <string name="title_myads">My Ads</string>
    <string name="lost_something">I Lost\nSomething</string>
    <string name="found_something">I Found\nSomething</string>
    <string name="upload">Upload</string>
    <string name="connection">Please check your internet connection</string>
    <string name="something_wrong">Something went wrong, please try again later.</string>
    <string name="network_available">You do not have any network.</string>
    <string name="msg_cancel">Cancel</string>
    <string name="login_signup">Login / Sign Up</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="About">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="save">Save</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="filter">Filter</string>
    <string name="gps_tital">GPS settings</string>
    <string name="gps_content">"GPS is not enabled. Do you want to go to settings menu?"</string>
    <string name="gps_loc">"GPS is not enabled.Please on your location"</string>
    <string name="settings">Settings</string>
    <string name="what_found">What did you find</string>
    <string name="what_lost">What did you lost</string>
    <string name="next">Next</string>


    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="lost_found_location">Lost/Found Location</string>
    <string name="add_detail">Add Details</string>
    <string name="pets_name">Pets Name</string>
    <string name="msg_pet_form">Add the key featuers of your pet</string>
    <string name="pet_detail">Pet Details*</string>
    <string name="reward_msg">Offering  Reward for Information</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="area">Area</string>
    <string name="street">Street</string>
    <string name="finish">Finish</string>
    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="age">Age</string>
    <string name="bodycolor">Body Color</string>
    <string name="height">Height</string>
    <string name="extradetail">Extra Detail</string>
    <string name="peopledetail">People Detail</string>
    <string name="lastlocation">Last Location</string>
    <string name="hint_password">Password</string>
    <string name="login">Log In</string>
    <string name="error_mobile">enter mobile number</string>
    <string name="error_mobile_invalid">invalid mobile number</string>
    <string name="error_password">enter password</string>
    <string name="register">Register</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="error_email">enter email</string>
    <string name="error_email_invalid">invalid email</string>
    <string name="hint_fullname">Full name</string>
    <string name="hint_password_retype">Retype Password</string>
    <string name="api_key">AIzaSyCmzWWqBlsyjk7yUqyXU2Y6YCt9i-a-34w</string>
    <string name="enter_location">Enter Location</string>
    <string name="auto_complete_text">Autocomplete textview with custom adapter.</string>
    <string name="error">Google Api key is missing.</string>
    <string name="error_name">Enter Name</string>
    <string name="valid_name">Enter valid name</string>
    <string name="valid_password">Password should be min 6 digit.</string>
    <string name="error_cnfm_password">Enter Confirm Password</string>
    <string name="msg_pwd">Password does not match.</string>
    <string name="valid_mobile">Enter valid mobile number.</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_firstname">First Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_age_name">Enter Age</string>
    <string name="enter_body_color">Enter body color</string>
    <string name="enter_height">Enter height</string>
    <string name="enter_detail">Enter Detail</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_area">Enter area</string>
    <string name="enter_street">Enter Street</string>
    <string name="lastdate">Last Date</string>
    <string name="lost_ads">Lost Ads</string>
    <string name="found_ads">Found Ads</string>
    <string name="like">Favourites</string>
    <string name="ads">Ads</string>
    <string name="all">ALL</string>
    <string name="breed">Breed</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="reward">Reward  \u20B9 </string>
    <string name="rupee"> \u20B9</string>
    <string name="enter_animal_breed">Enter animal breed</string>
    <string name="enter_brand">Enter Brand</string>
    <string name="enter_model">Enter model name</string>
    <string name="gender">Gender</string>
    <string name="login_msg">Please login</string>
    <string name="clear_all">Clear All</string>
    <string name="hint_location">Location</string>
    <string name="apply">Apply</string>
    <string name="hint_age">Age</string>
    <string name="enter_name">Name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-9444676719023189/1190049398</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_unit_id">ca-app-pub-9444676719023189/2515573502</string>
    <string name="people">1</string>
    <string name="pets">2</string>
    <string name="automobile">3</string>
    <string name="bags">4</string>
    <string name="electronics">5</string>
    <string name="documents">6</string>
    <string name="keys">7</string>
    <string name="jewelry">8</string>
    <string name="personal_things">9</string>
    <string name="cxz">10</string>
    <string name="title">Title</string>
    <string name="call">Call</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission">Permission</string>

</resources>
