<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.lostandfound.view.ui.ExploreFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_explore_demo" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.app.lostandfound.view.ui.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.app.lostandfound.view.ui.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.app.lostandfound.view.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.app.lostandfound.view.ui.MyAdsFragment"
        android:label="@string/title_myads"
        tools:layout="@layout/fragment_my_ads" />

</navigation>