<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LastLocationActivity">
    <include
        layout="@layout/toolbar_default"
        app:layout_constraintStart_toStartOf="@+id/parent"
        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_actionbar"
        app:layout_constraintBottom_toTopOf="@+id/btnNext">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <com.app.lostandfound.costomview.CustomTextView
            android:id="@+id/txtLastData"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_round"
            android:hint="@string/lastdate"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:edittextfont="OpenSans-Regular.ttf"
            app:edittextfontHint="OpenSans-Regular.ttf" />
        <com.app.lostandfound.costomview.CustomEditText
            android:id="@+id/edtStreet"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_round"
            android:hint="@string/street"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:edittextfont="OpenSans-Regular.ttf"
            app:edittextfontHint="OpenSans-Regular.ttf" />
        <com.app.lostandfound.costomview.CustomEditText
            android:id="@+id/edtArea"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_round"
            android:hint="@string/area"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:edittextfont="OpenSans-Regular.ttf"
            app:edittextfontHint="OpenSans-Regular.ttf" />
        <com.app.lostandfound.costomview.CustomEditText
            android:id="@+id/edtCity"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_round"
            android:hint="@string/city"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:edittextfont="OpenSans-Regular.ttf"
            app:edittextfontHint="OpenSans-Regular.ttf" />
        <com.app.lostandfound.costomview.CustomEditText
            android:id="@+id/edtState"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_round"
            android:hint="@string/state"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:edittextfont="OpenSans-Regular.ttf"
            app:edittextfontHint="OpenSans-Regular.ttf" />


        <com.app.lostandfound.costomview.CustomEditText
            android:id="@+id/edtExtraDetail"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_round"
            android:hint="@string/extradetail"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:maxLength="120"
            android:text=""
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:edittextfont="OpenSans-Regular.ttf"
            app:edittextfontHint="OpenSans-Regular.ttf" />



    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.app.lostandfound.costomview.CustomTextView
        android:id="@+id/btnNext"
        style="@style/ButtonRippleStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/squre_theme_bg"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:edittextfont="OpenSans-Bold.ttf" />



</androidx.constraintlayout.widget.ConstraintLayout>